# darkstack

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run_factory.py
factory_design/: README.md  __init__.py  cli.py  design.py  diagnose.py  levers.py  pathology.py  presets.py  reference.py  report.py  selftest.py  simulate.py  sweep.py  verify.py
factory_probe/: README.md  __init__.py  _smoke.py  cli.py  experiment.py  instrumentation.py  interfaces.py  legible.py  records.py  report.py  scorer.py  steering.py
factory_probe/adapters/: __init__.py  _derived.py  hermes.py  openclaw.py  openfang.py  skeleton.py
factory_probe/mock/: __init__.py  coupled.py  dividend_task.py  dss_game.py  evaluator.py  population.py
factory_probe/substrates/: __init__.py  tabular.py
factory_probe/tracks/: __init__.py  catastrophe.py  entrainment.py  governance.py  opacity.py  pathology.py  stackelberg.py  versioning.py
figures/: analytic_anchor.py  audit_layout.py  bridge.py  dividend_depth.py  dynamics_invariance.py  fig1_opacity.py  fig2_stackelberg.py  fig3_versioning.py  fig4_pathologies.py  fig5_anything_factory.py  opacity_dividend.py  robustness.py
src/: control.py  darkfactory.py  dividend.py  ews.py  factory.py  kuramoto.py  learners.py  style.py  transfer_operator.py
tests/: test_fd_cli.py  test_fd_design.py  test_fd_levers.py  test_fd_pathology.py  test_fd_reference.py  test_fd_simulate.py  test_fd_sweep.py  test_foundation.py  test_hermes_adapter.py  test_interface_conformance.py  test_legible.py  test_mock.py  test_openclaw_adapter.py  test_openfang_adapter.py  test_steering.py  test_tabular.py  test_tracks.py
