[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-probe"
version = "0.1.0"
description = "Measure structural properties of a running agent factory"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0", "scipy>=1.13", "scikit-learn>=1.4"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
factory-probe = "factory_probe.cli:main"

[tool.setuptools]
# The measurement modules live in src/ and are placed on the path by
# factory_probe/__init__.py; an editable install keeps them resolvable.
packages = ["factory_probe", "factory_probe.mock", "factory_probe.tracks",
            "factory_probe.adapters", "factory_probe.substrates"]
