[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "darkstack"
version = "0.2.0"
description = "Design-time simulation and runtime measurement for autonomous agent factories"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0", "scipy>=1.13", "scikit-learn>=1.4"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
factory-design = "factory_design.cli:main"
factory-probe = "factory_probe.cli:main"

[tool.setuptools]
# The dynamical organs live in src/ and are placed on the path by each package's
# __init__.py; an editable install keeps them resolvable.
packages = ["factory_design",
            "factory_probe", "factory_probe.mock", "factory_probe.tracks",
            "factory_probe.adapters", "factory_probe.substrates"]
